--- a/lab8/package.json
+++ b/lab8/package.json
@@ -1,7 +1,7 @@
 {
     "name": "lab8",
     "version": "0.1.0",
-    "private": true,
+    "private": false,
     "homepage": "./",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.4",
